# maid_llm

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build-android.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/maid_llm_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: build-info.c  lcpp.podspec  maid_llm.podspec
ios/Classes/: maid_llm.cpp
lib/: chat_node.dart  lcpp.dart  maid_llm.dart  maid_llm_bindings.dart  maid_llm_bindings_generated.dart
lib/src/: bindings.dart  chat_message.dart  chat_node.dart  chat_node_tree.dart  context_params.dart  gpt_params.dart  llama_bindings.dart  llama_cpp.dart  maid_llm.dart  maid_llm_bindings.dart  model_params.dart  sampling_params.dart
linux/: CMakeLists.txt
macos/: build-info.c  lcpp.podspec  maid_llm.podspec
macos/Classes/: maid_llm.cpp
src/: CMakeLists.txt  build-info.c  maid_llm.c  maid_llm.cpp  maid_llm.h  maid_llm.hpp  openblas.pc.in  prebuild.bat  prebuild.sh  utils.hpp
test/: chat_node_test.dart
windows/: CMakeLists.txt
